# 42-taskmaster

./: .gitignore  Cargo.toml  README.md  config.yaml  log.txt
.github/workflows/: main.yaml
src/: config.yaml
src/client/: cli.rs  client.rs  command.rs  history.rs  libc.rs  shell.rs  taskmasterctl.rs
src/logs/: main.rs
src/server/: better_logs.rs  client_handler.rs  config.rs  logger.rs  process_manager.rs  ring_buffer.rs  running_process.rs  server.rs  taskmasterd.rs
src/server/process_manager/: manager.rs  mod.rs  process.rs  program.rs  state.rs
src/tcl/: config.rs  error.rs  lib.rs  message.rs
src/tcl/mylibc/: mod.rs  raw.rs
