[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[lib]
name = "tcl"
path = "src/tcl/lib.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] } # used to tell other crate how to transform a struct
serde_yaml = "0.9.34" # used to transform a struct into a yaml format
tokio = { version = "1.40.0", features = ["full"] } # used to create the client/server architecture
